feat: adds subscriber group management APIs     - updates UpdateSubscriber method     - adds GetSubscriberGroupDetail endpoint     - adds AddNewSubscriberGroup endpoint     - adds UpdateSubscriberGroup endpoint     - adds DeleteSubscriberGroup endpoint     - changes OSPMLogger.Log. to logger.OSPMLogger to have better coding pattern!
