# internal/models/permissions.go
@@ -42,3 +42,47 @@ type ReportLevelPerms struct {
 	ID              string `gorm:"type:uuid;default:uuid_generate_v4();primary_key" json:"report_level_perms_id" example:"ed83a2ba-c55c-4297-b2ac-df7b02abdd7a"`
 	PermissionSetID string `gorm:"type:uuid;not null;index;" json:"permission_set_id"`
 }
+
+// ######################
+// #	Swagger Models	#
+// ######################
+// The following models are used for swagger documentation
+type PermissionSetsSwagger struct {
+	ID                     string                          `json:"permission_sets_id" example:"ed83a2ba-c55c-4297-b2ac-df7b02abdd7a"`
+	OrganizationLevelPerms OrganizationalLevelPermsSwagger `json:"organizational_level_perms"`
+	AccessLevelPerms       AccessLevelPermsSwagger         `json:"access_level_perms"`
+	SubscriberLevelPerms   SubscriberLevelPermsSwagger     `json:"subscriber_level_perms"`
+	PaymentLevelPerms      PaymentLevelPermsSwagger        `json:"payment_level_perms"`
+	ReportLevelPerms       ReportLevelPermsSwagger         `json:"report_level_perms"`
+	SubscriberGroupID      string                          `json:"subscriber_group_id" example:"ed83a2ba-c55c-4297-b2ac-df7b02abdd7b"`
+}
+
+// This model is used for swagger documentation
+type OrganizationalLevelPermsSwagger struct {
+	ID              string `json:"organizational_level_perms_id" example:"ed83a2ba-c55c-4297-b2ac-df7b02abdd7a"`
+	PermissionSetID string `json:"permission_set_id" example:"ed83a2ba-c55c-4297-b2ac-df7b02abdd7a"`
+}
+
+// This model is used for swagger documentation
+type SubscriberLevelPermsSwagger struct {
+	ID              string `json:"subscriber_level_perms_id" example:"ed83a2ba-c55c-4297-b2ac-df7b02abdd7a"`
+	PermissionSetID string `json:"permission_set_id"`
+}
+
+// This model is used for swagger documentation
+type AccessLevelPermsSwagger struct {
+	ID              string `json:"access_level_perms_id" example:"ed83a2ba-c55c-4297-b2ac-df7b02abdd7a"`
+	PermissionSetID string `json:"permission_set_id"`
+}
+
+// This model is used for swagger documentation
+type PaymentLevelPermsSwagger struct {
+	ID              string `json:"payment_level_perms_id" example:"ed83a2ba-c55c-4297-b2ac-df7b02abdd7a"`
+	PermissionSetID string `json:"permission_set_id"`
+}
+
+// This model is used for swagger documentation
+type ReportLevelPermsSwagger struct {
+	ID              string `json:"report_level_perms_id" example:"ed83a2ba-c55c-4297-b2ac-df7b02abdd7a"`
+	PermissionSetID string `json:"permission_set_id"`
+}
